# Data-API-Pipeline

./: README.md  pyproject.toml  requirements.txt
dapi/: API.py  Cleanup.py  CreateAPI.py  DataHealthReport.py  DefinitionHealthReport.py  Dependencies.py  Documentation.py  Environment.py  Latest.py  MetadataCatalog.py  PatchDbt.py  Snapshot.py  Update.py  Version.py  package_cli.py
dapi/ConceptGlossary/: ConceptGlossaryCsv.py  ConceptGlossaryFactory.py  ConceptGlossaryJson.py  ConceptGlossaryNone.py  ConceptGlossaryRvk.py
dapi/DbtPatch/adapters/base/: impl.py
dapi/History/: Snapshot.py  Type2.py
dapi/ImplementationTemplates/: api_config.yml  api_documentation_template.md  dapi.env  profiles.yml
dapi/Shared/: Audit.py  AuditDecorators.py  BasicDecorators.py  Config.py  ConfigBase.py  DataClasses.py  Decorators.py  Environment.py  EnvironmentVariable.py  Json.py  LogLevel.py  Logger.py  PrettyPrint.py  Utils.py
dapi/TargetDatabase/: SQLServer.py  TargetDatabase.py  TargetDatabaseFactory.py
dapi/TargetKnowledgeBase/: Confluence.py  TargetKnowledgeBaseFactory.py
dapi/Templates/: api_data_health_report_template.md  api_definition_health_report_template.md
implementation_templates/: GenerateAPI.py  api_config.yml  api_documentation_template.md  data-api-pipeline.env_example
processes/: API.py  APIConfig.py  APISupport.py  Cleanup.py  CreateAPI.py  CreateSnapshots.py  DataHealthClasses.py  DataHealthReport.py  DefinitionHealthClasses.py  DefinitionHealthReport.py  Documentation.py  DocumentationClasses.py  EnrichMetadataCatalog.py  Environment.py  GenerateAPIShared.py  GenerateDataHealthReport.py  GenerateDataHealthReportData.py  GenerateDefinitionHealthReportData.py  GenerateDocumentationData.py  GenerateTestReport.py  Latest.py  MetadataCatalog.py  SharedDataClasses.py  Snapshot.py  TargetDatabaseInterface.py  TargetDatabase_SQLServer.py  TargetKnowledgeBaseInterface.py  TargetKnowledgeBase_Confluence.py
processes/ConceptGlossary/: ConceptGlossary.py  ConceptGlossaryFactory.py  ConceptGlossaryNone.py  ConceptGlossaryRvk.py
processes/Shared/: Config.py  ConfigBase.py  Decorators.py  Logger.py  Utils.py
processes/TargetDatabase/: SQLServer.py  TargetDatabase.py  TargetDatabaseFactory.py
processes/TargetKnowledgeBase/: Confluence.py  TargetKnowledgeBase.py  TargetKnowledgeBaseFactory.py
target_database_support/sql_server/: Current_vs_Snapshot_diff_report.sql  Deprecation_drop_commands_for_private_objects.sql  Missing_column_store.sql  Update_snapshot_columns.sql  audit_dbt_execution_time_day_comparison.sql  audit_dbt_execution_time_trend.sql  audit_most_expensive_items.sql  audit_top_ten_most_expensive_models.sql  audit_top_ten_most_expensive_snapshots.sql  audit_top_ten_most_expensive_tests.sql  database_file_size.sql  distinct_values_per_column  generate_dbt_source_table_yml.sql  max_length_of_string_values_in_a_relation.sql  max_length_string_detection  partitioning_support_queries  relation_pair_comparison_high_level  relation_pair_data_difference  relation_version_differences.sql  row_search_query.sql  snapshot_data_type_corrections.sql  snapshot_diff_query.sql  table_and_column_comments_in_sql_server.sql  table_size_on_disk_advanced  table_space_on_disk_accross_dbs_advanced.sql
target_database_support/sql_server/dimensions/: Date_dim.sql  Time_dim.sql  date_dimension.sql  time_dimension.sql
(+44 files in other folders)
