[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dapi", "dapi.ConceptGlossary", "dapi.Shared", "dapi.TargetDatabase", "dapi.TargetKnowledgeBase", "dapi.Templates", "dapi.ImplementationTemplates"]

#[tool.setuptools.packages.find]
#where = ["dapi"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yml", "*.env"]

[project]
name = "dapi"
version = "1.61"
authors = [ {name = "Grimur Tomasson", email = "grimur@gthugbunadarradgjof.com"} ]
description = "Logic to simplify the implementation of data API pipelines built on top of dbt."
readme = "README.md"
requires-python = ">= 3.9"
dependencies = ["dbt-sqlserver==1.4.3", "dbt-core==1.4.6", "python-dotenv", "duckdb==0.8.1"]

#[project.optional-dependencies]
#sqlserver = ["dbt-sqlserver==1.4.0"]

[project.scripts]
dapi = "dapi.package_cli:main"
create-dapi = "dapi.CreateAPI:main"

# pip install build
# python -m build .
# pip install .

# pipx install 'dapi[sqlserver]' --force --include-deps
