[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dapi", "dapi.ConceptGlossary", "dapi.Shared", "dapi.TargetDatabase", "dapi.TargetKnowledgeBase", "dapi.Templates", "dapi.ImplementationTemplates", "dapi.DbtPatch"]

#[tool.setuptools.packages.find]
#where = ["dapi"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yml", "*.env"]

[project]
name = "dapi"
version = "1.91"
authors = [ {name = "Grimur Tomasson", email = "grimur@gthugbunadarradgjof.com"} ]
description = "Logic to simplify the implementation of data API pipelines built on top of dbt."
readme = "README.md"
requires-python = ">= 3.9"
dependencies = ["dbt-sqlserver==1.7.4", "dbt-core==1.7.13", "python-dotenv", "duckdb==0.10.2"]

#[project.optional-dependencies]
#sqlserver = ["dbt-sqlserver==1.4.0"]

[project.scripts]
dapi = "dapi.package_cli:main"
create-dapi = "dapi.CreateAPI:main"
dapi-version = "dapi.Version:main"
dapi-prepare = "dapi.Update:main" # So updates don't try to rename the exe running.

# pip install build
# python -m build .
# pip install .

# pipx install 'dapi[sqlserver]' --force --include-deps
